objects/Hotfix__c.object
<CustomObject>
    <fields>
        <fullName>Hotfix_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotfix Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Hotfixes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MigrationDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Migration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RevisionCommit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revision Commit#</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Hotfix Status State Models</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Request For Validation</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Migrated</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Hotfix</label>
    <nameField>
        <displayFormat>HF-{00000}</displayFormat>
        <label>HF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotfixes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>